# src/api/routers/cars.go
@@ -102,3 +102,13 @@ func CarModelImage(r *gin.RouterGroup, cfg *config.Config) {
 	r.GET("/:id", h.GetById)
 	r.POST("/get-by-filter", h.GetByFilter)
 }
+
+func CarModelProperty(r *gin.RouterGroup, cfg *config.Config) {
+	h := handlers.NewCarModelPropertyHandler(cfg)
+
+	r.POST("/", h.Create)
+	r.PUT("/:id", h.Update)
+	r.DELETE("/:id", h.Delete)
+	r.GET("/:id", h.GetById)
+	r.POST("/get-by-filter", h.GetByFilter)
+}
