# src/data/models/car.go
@@ -75,10 +75,10 @@ type CarModelPriceHistory struct {
 type CarModelProperty struct {
 	BaseModel
 	CarModel   CarModel `gorm:"foreignKey:CarModelId;constraint:OnUpdate:NO ACTION;OnDelete:NO ACTION"`
-	CarModelId int
+	CarModelId int      `gorm:"uniqueIndex:idx_CarModelId_PropertyId"`
 	Property   Property `gorm:"foreignKey:PropertyId;constraint:OnUpdate:NO ACTION;OnDelete:NO ACTION"`
-	PropertyId int
-	Value      string `gorm:"size:100;type:string;not null"`
+	PropertyId int      `gorm:"uniqueIndex:idx_CarModelId_PropertyId"`
+	Value      string   `gorm:"size:100;type:string;not null"`
 }
 
 type CarModelComment struct {
